# mlops_hw

./: .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
iris_classifier/: infer.py  run_server.py  train.py
iris_classifier/conf/: config.yaml
outputs/2023-10-20/23-46-03/.hydra/: hydra.yaml
outputs/2023-10-20/23-46-20/.hydra/: hydra.yaml
outputs/2023-10-20/23-46-25/.hydra/: config.yaml  hydra.yaml
triton/: client.py  docker-compose.yml
triton/model_repository/iris_classifier/: config.pbtxt
triton/model_repository/iris_classifier/1/: model.onnx.dvc
