[tool.poetry]
name = "iris-classifier"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.1"
numpy = "^1.26.0"
scikit-learn = "^1.3.1"
joblib = "^1.3.2"
dvc = "^3.27.0"
hydra-core = "^1.3.2"
onnx = "^1.15.0"
onnxruntime = "^1.16.3"
mlflow = "^2.8.1"
skl2onnx = "^1.15.0"
matplotlib = "^3.8.2"
dvc-gdrive = "^2.20.0"
setuptools = "59.7.0"
pydantic = "1.10.11"
tritonclient = {extras = ["http"], version = "^2.41.0"}

[tool.isort]
src_paths = ["iris_classifier"]
profile = "black"
line_length = 90
lines_after_imports = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
